--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     padding: 0%;
     margin: 0;
     font-family: sans-serif;
@@ -28,4 +28,118 @@ tr:nth-child(even){
 }
 tr:nth-child(odd){
     background-color: rgb(194, 175, 175);
+} */
+
+/* h1 {
+    text-align: center;
+    font-size: 3rem;
+}
+form {
+    width: 40%;
+    border: 2px solid gray;
+    margin: 20px auto;
+    border-radius: 3px;
+    padding: 30px 0px;
+}
+
+input {
+    display: block;
+    margin: 12px auto;
+    border: 2px solid #eee;
+}
+input[type="text"],input[type="date"] {
+    height: 30px;
+    width: 90%;
+    border-radius: 3px;
+    font-size: 1.1rem;
+}
+input[type="submit"] {
+    padding: .7rem;
+    font-size: 1em;
+    font-weight: bold;
+    margin-top: 30px;
+}
+input[type="submit"]:active {
+    background-color: rgba(128, 128, 128, 0.404);
+}
+#show-data div {
+    font: 1.4em;
+    font-weight: bold;
+} */
+
+/* #see-more {
+    display: block;
+    font-weight: bold;
+    padding: .8rem;
+    margin: 10px auto;
+    background-color: royalblue;
+    color: #f4f4ff;
+} */
+
+/* form {
+    width: 40%;
+    margin: 30px auto;
+    border: 1px solid black;
+    box-sizing: border-box;
+}
+input,label,button {
+    margin : 10px auto;
+    display: block;
+    font-size: 1.1rem;
+}
+input,label{
+    width: 90%;
+    height: 23px;
+}
+button {
+    padding: .6rem .9rem;
+    margin-top: 15px;
+}
+
+table {
+    width: 100%;
+}
+th,td,tr {
+    border: 1px solid black;
+}
+td,th {
+    text-align: center;
+    width: 33.33%;
+    height: 40px;
+    vertical-align: middle;
+}
+td button {
+    background-color: royalblue;
+    color: white;
+} */
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center ;
+    height: 100vh;
+}
+
+.main{
+    width: 90%;
+    display: flex;
+    justify-content: space-evenly;
+}
+.main img {
+    width: 24.5%;
+    display: block;
+}
+.model-image {
+    width: 100%;
+    position: absolute;
+    background-color: rgba(36, 35, 35, 0.246);
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.model-image img{
+    display: block;
+    width: 80%;
+    position: relative;
+
 }
